Bug 133822 - Toolbar and sidebar items positioning messed up with RTL-language UI
Summary: Toolbar and sidebar items positioning messed up with RTL-language UI
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.0.0.0.beta1+
Hardware: All All
: highest critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.0.1
Keywords: bibisected, regression
: 133821 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-06-09 12:10 UTC by Eyal Rozenberg
Modified: 2020-06-10 08:53 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Writer with Hebrew UI exhibiting the bug (107.53 KB, image/png)
2020-06-09 12:11 UTC, Eyal Rozenberg
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eyal Rozenberg 2020-06-09 12:10:44 UTC
Description:
The elements of the different toolbars in Writer are drawn in weird positions instead of consecutively.

Seeing the same issue in Calc, but not in Impress. Draw has some other (?) nasty UI rendering bug.

Steps to Reproduce:
Set the UI to Hebrew (under Tools | Options | Languages) and restart LO.

Actual Results:
Toolbar element positioning messed up

Expected Results:
Toolbar elements fill up the toolbar from the right, leftwards (like they do from the left rightwards with LTR layout)


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
This was reported to me in 7.0.0.0alpha1 at the latest. Haven't checked yet, though.
Comment 1 Eyal Rozenberg 2020-06-09 12:11:20 UTC
Created attachment 161807 [details]
Writer with Hebrew UI exhibiting the bug
Comment 2 Xisco Faulí 2020-06-09 12:23:46 UTC
Reproduced using SAL_RTL_ENABLED=1 instdir/program/scalc
Comment 3 Xisco Faulí 2020-06-09 12:38:28 UTC
it seems to be related to the welding process.
The alignment panel in Writer started to have this issue after https://cgit.freedesktop.org/libreoffice/core/commit/?id=c3b58a0de7b7dd08695fbc9ad96c573ea1305357
Over time, more panels were welded and now more panels have this issue
Comment 4 Eyal Rozenberg 2020-06-09 13:15:59 UTC
(In reply to Xisco Faulí from comment #3)

By the way, look at Draw also, there's an even worse RTL UI layout issue there (or more than one). Should merit a separate bug.
Comment 5 Xisco Faulí 2020-06-09 14:19:33 UTC
*** Bug 133821 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2020-06-09 18:53:52 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fcd898c60093eeb5e81f8dc312edc768107c9380

tdf#133822 mirror GtkSalObjectWidgetClip location for RTL

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2020-06-09 18:54:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/94dd6c84db201dd5fecdbdcad6c62f8337d0eaa9

tdf#133822 mirror GtkSalObjectWidgetClip location for RTL

It will be available in 7.0.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Eyal Rozenberg 2020-06-09 20:00:23 UTC
@caolanm : Did you check whether this eliminates the Draw issue as well?
Comment 9 Xisco Faulí 2020-06-10 08:53:03 UTC
Verified in

Version: 7.1.0.0.alpha0+
Build ID: d2205a26b96ed321c869f6eb7c955648c83dd805
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!
Comment 10 Xisco Faulí 2020-06-10 08:53:59 UTC
(In reply to Eyal Rozenberg from comment #8)
> @caolanm : Did you check whether this eliminates the Draw issue as well?

Hello Eyal,
I don't see any problem in Draw after Caolan's fix. Anyway, give it a try with a daily build containing the patch and if it's still reproducible, report it in a new ticket. Thanks in advance