tdf#133822 mirror GtkSalObjectWidgetClip location for RTL

Change-Id: I4ab4a0fb8fc343ee9a4c66c58e20583482958f37
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/95889
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>